# inventory-and-billing-AJ-

./: .env.example  .gitignore  Procfile  README.md  build.sh  pyproject.toml  release-commands.sh  render.yaml  requirements.txt
autoparts/: security_settings.py  settings.py  urls.py
inventory/: admin.py  api.py  apps.py  checks.py  firebase.py  firestore_repo.py  forms.py  models.py  signals.py  urls.py  views.py
inventory/management/commands/: backfill_firestore.py  backup_db.py
inventory/migrations/: 0001_initial.py
inventory/static/inventory/: style.css
inventory/templates/inventory/: base.html  customer_form.html  customer_list.html  dashboard.html  product_form.html  product_list.html  receipt.html  sale_form.html
scripts/: render-build.sh  render-start.sh
